--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="severity_of_damage">Severity of damage</string>
     <string name="location_of_damage">Location of damage</string>
     <string name="photos_of_the_damage">Photos of the damage</string>
+    <string name="damage_report">Damage report</string>
 </resources>
