Add the Damage database and add the insert method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@
     <string name="location_of_damage">Location of damage</string>
     <string name="photos_of_the_damage">Photos of the damage</string>
     <string name="damage_report">Damage report</string>
+    <string name="delete_report">Delete</string>
+    <string name="status_report">Status</string>
 </resources>
